--- a/DailyUpdate-v3.1/DailyUpdate-v3.1.csproj
+++ b/DailyUpdate-v3.1/DailyUpdate-v3.1.csproj
@@ -60,6 +60,9 @@
     <Compile Include="ModalWindow.xaml.cs">
       <DependentUpon>ModalWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="MyReportUc.xaml.cs">
+      <DependentUpon>MyReportUc.xaml</DependentUpon>
+    </Compile>
     <Compile Include="OldSetupUC.xaml.cs">
       <DependentUpon>OldSetupUC.xaml</DependentUpon>
     </Compile>
@@ -116,6 +119,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="ModalWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="MyReportUc.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
